tests/fixtures/syntax/valid/comment_after_assertion_block_open.repor
case "comment after assertion block open" {
  $ true
  assert { // trailing comment on the assert open line
    exit 0
  }
}
