tests/fixtures/syntax/invalid/document_case_assertion_block.repor
# Execution constructs are not part of the document case body whitelist; an
# assertion block inside the block is a syntax error.
document case {
  assert {
    exit 0
  }
}

case "never parsed" {
  $ true
  assert {
    exit 0
  }
}
